{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 10,
  "lineage": "c9a64af0-548a-36e8-6331-16410f3a3bae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07574623ba26e48f8",
            "arn": "arn:aws:ec2:us-east-1:405916793095:instance/i-09525af3e3b94ed4f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09525af3e3b94ed4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:653d:df00:8570:db78:f3fd:43ca"
            ],
            "key_name": "tf-ec2-vm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e32781f5e823e89",
            "private_dns": "ip-10-0-1-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-35-172-235-188.compute-1.amazonaws.com",
            "public_ip": "35.172.235.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:405916793095:key/eba5b6ae-6fce-435b-a5eb-4624694542bc",
                "tags": {
                  "ManagedBy": "Terraform",
                  "Name": "tf-ec2-vm-root",
                  "Project": "tf-ec2-vm"
                },
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Name": "tf-ec2-vm-root",
                  "Project": "tf-ec2-vm"
                },
                "throughput": 125,
                "volume_id": "vol-02f5229f882d814fa",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5b04875c3312d57",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm",
              "Project": "tf-ec2-vm"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm",
              "Project": "tf-ec2-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0315d35ea97aad9c8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.this",
            "aws_security_group.this",
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_vpc_ipv6_cidr_block_association.this",
            "data.aws_ssm_parameter.ubuntu_ami",
            "data.aws_subnet.ipv6_check",
            "data.aws_subnet.selected",
            "data.aws_subnets.selected",
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405916793095:internet-gateway/igw-0ac1693d464cc711d",
            "id": "igw-0ac1693d464cc711d",
            "owner_id": "405916793095",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-igw",
              "Project": "tf-ec2-vm"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-igw",
              "Project": "tf-ec2-vm"
            },
            "vpc_id": "vpc-01d78018f288f8303"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405916793095:route-table/rtb-0275654defbf04f4c",
            "id": "rtb-0275654defbf04f4c",
            "owner_id": "405916793095",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac1693d464cc711d",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac1693d464cc711d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-rt",
              "Project": "tf-ec2-vm"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-rt",
              "Project": "tf-ec2-vm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d78018f288f8303"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a027bc3cd8f74f5d",
            "route_table_id": "rtb-0275654defbf04f4c",
            "subnet_id": "subnet-0f5b04875c3312d57"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.this",
            "aws_subnet.this",
            "aws_vpc.this",
            "aws_vpc_ipv6_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405916793095:security-group/sg-0315d35ea97aad9c8",
            "description": "SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "All outbound IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0315d35ea97aad9c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from allowed CIDRs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from allowed CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP (ping) from allowed CIDRs",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ollama API from allowed CIDRs",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP/11434 (Ollama API) from allowed CIDRs",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP/443 (QUIC) from allowed CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP/80 (QUIC) from allowed CIDRs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rsync from allowed CIDRs",
                "from_port": 873,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 873
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from allowed IPv6 CIDRs",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from allowed IPv6 CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "ICMPv6 (ping) from allowed IPv6 CIDRs",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmpv6",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Ollama API from allowed IPv6 CIDRs",
                "from_port": 11434,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [],
                "description": "SSH from allowed IPv6 CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "UDP/11434 (Ollama API) from allowed IPv6 CIDRs",
                "from_port": 11434,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [],
                "description": "UDP/443 (QUIC) from allowed IPv6 CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "UDP/80 (QUIC) from allowed IPv6 CIDRs",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "rsync from allowed IPv6 CIDRs",
                "from_port": 873,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 873
              }
            ],
            "name": "tf-ec2-vm-sg",
            "name_prefix": "",
            "owner_id": "405916793095",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-sg",
              "Project": "tf-ec2-vm"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-sg",
              "Project": "tf-ec2-vm"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d78018f288f8303"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405916793095:subnet/subnet-0f5b04875c3312d57",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5b04875c3312d57",
            "ipv6_cidr_block": "2600:1f18:653d:df00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-007d36dccae557a05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405916793095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-subnet",
              "Project": "tf-ec2-vm"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-subnet",
              "Project": "tf-ec2-vm"
            },
            "vpc_id": "vpc-01d78018f288f8303"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv6_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:405916793095:vpc/vpc-01d78018f288f8303",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbb43dbdcd849dbb",
            "default_route_table_id": "rtb-071623ca2721d21fc",
            "default_security_group_id": "sg-0cbdcafeb33383ad6",
            "dhcp_options_id": "dopt-00252f2efcfb9474b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d78018f288f8303",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-01e09487fcc85511a",
            "ipv6_cidr_block": "2600:1f18:7c64:2500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071623ca2721d21fc",
            "owner_id": "405916793095",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-vpc",
              "Project": "tf-ec2-vm"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-ec2-vm-vpc",
              "Project": "tf-ec2-vm"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}